--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <li class="selected"><a href="index.htm">Home</a></li>
           <li><a href="navitem.htm">Nav Item</a></li>
           <li><a href="navitem.htm">Nav Item</a></li>
-          <li><a href="navitem.htm">Nav Item</a></li>
+          <li><a href="navitem.htm">Nav Item3</a></li>
         </ul> <!-- end MainNav -->
       </div> <!-- end Header -->
 
