--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="Description of website" />
     <link rel="apple-touch-icon" href="apple-touch-icon.png" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
-    <link rel="stylesheet" href="_style/style.css" />
+    <link rel="stylesheet" href="style/style.css" />
 
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript">
     if (typeof jQuery == 'undefined') {
-          document.write(unescape("%3Cscript src='_scripts/jquery-2.0.3.min.js' type='text/javascript'%3E%3C/script%3E"));
+          document.write(unescape("%3Cscript src='scripts/jquery-2.0.3.min.js' type='text/javascript'%3E%3C/script%3E"));
       }
     </script> <!-- Load local jQuery if Google CDN is unreachable -->
   </head>
@@ -26,7 +26,7 @@
     <div id="Wrapper">
 
       <div id="Header">
-        <a href="index.htm"><img src="_img/logo.png" alt="Website Logo" title="" class="logo" /></a>
+        <a href="index.htm"><img src="img/logo.png" alt="Website Logo" title="" class="logo" /></a>
         <ul id="MainNav">
           <li class="selected"><a href="index.htm">Home</a></li>
           <li><a href="navitem.htm">Nav Item</a></li>
@@ -55,6 +55,6 @@
 
     </div> <!-- end Wrapper -->
 
-    <script type="text/javascript" src="_scripts/main.js"></script>
+    <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
