Updated Sass and Normalize
Removed vendor prefixes not needed anymore. Updated to latest version of
Normalize.

--- a/index.htm
+++ b/index.htm
@@ -47,7 +47,7 @@
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    
+
     <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
     <script type="text/javascript">
     if (typeof jQuery == 'undefined') {
@@ -84,7 +84,7 @@
          <a href="navitem.htm">Nav Item</a> |
          <a href="navitem.htm">Nav Item</a>
         </p>
-        <p class="legal">Unless otherwise noted, all content, images, videos, and text are copyright (©) 2013.</p>
+        <p class="legal">Unless otherwise noted, all content, images, videos, and text are copyright (©) 20XX.</p>
       </footer>
 
     </div> <!-- end Wrapper -->
