convert ul to nav

--- a/index.htm
+++ b/index.htm
@@ -61,12 +61,12 @@
 
       <div id="Header">
         <a href="index.htm"><img src="_img/logo.png" alt="Website Logo" title="" class="logo" /></a>
-        <ul id="MainNav">
-          <li class="selected"><a href="index.htm">Home</a></li>
-          <li><a href="navitem.htm">Nav Item</a></li>
-          <li><a href="navitem.htm">Nav Item</a></li>
-          <li><a href="navitem.htm">Nav Item</a></li>
-        </ul> <!-- end MainNav -->
+        <nav id="MainNav">
+          <a class="selected" href="index.htm">Home</a>
+          <a href="navitem.htm">Nav Item</a>
+          <a href="navitem.htm">Nav Item</a>
+          <a href="navitem.htm">Nav Item</a>
+        </nav> <!-- end MainNav -->
       </div> <!-- end Header -->
 
       <div id="MainContent">
